[package]
name = "psg-calendar-to-ballbreaker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clokwerk = "0.4.0"
env_logger = "0.11.8"
gcal_rs = "0.1.7"
log = "0.4.28"
rusqlite = "0.37.0"
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = "1.48.0"
